tests/ui/closures/2229_closure_analysis/capture-disjoint-field-struct.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/capture-disjoint-field-struct.rs:13:13
   |
LL |     let c = #[rustc_capture_analysis]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: First Pass analysis includes:
  --> $DIR/capture-disjoint-field-struct.rs:17:5
   |
LL | /     || {
LL | |
LL | |
LL | |         println!("{}", p.x);
...  |
LL | |     };
   | |_____^
   |
note: Capturing p[(0, 0)] -> Immutable
  --> $DIR/capture-disjoint-field-struct.rs:20:24
   |
LL |         println!("{}", p.x);
   |                        ^^^

error: Min Capture analysis includes:
  --> $DIR/capture-disjoint-field-struct.rs:17:5
   |
LL | /     || {
LL | |
LL | |
LL | |         println!("{}", p.x);
...  |
LL | |     };
   | |_____^
   |
note: Min Capture p[(0, 0)] -> Immutable
  --> $DIR/capture-disjoint-field-struct.rs:20:24
   |
LL |         println!("{}", p.x);
   |                        ^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
